# Roadfigher

./: .gitignore  .travis.yml  Background.cpp  Background.h  Bullet.h  BulletSFML.h  CMakeLists.txt  Doxyfile  Entity.cpp  Entity.h  Game.cpp  Game.h  PassingCar.cpp  PassingCar.h  PassingCarSFML.cpp  PassingCarSFML.h  PlayerCar.cpp  PlayerCar.h  PlayerCarSFML.cpp  PlayerCarSFML.h  PlayerCarsSFML.h  README.md  RacingCar.cpp  RacingCar.h  RacingCarSFML.h  Random.cpp  Random.h  Singleton.cpp  Singleton.h  Transformation.cpp  Transformation.h  World.cpp  World.h  applyClangFormat.sh  main.cpp  scoreboard.json
cmake/Modules/: FindSFML.cmake
game/include/: Background.h  Game.h
game/src/: Background.cpp  Game.cpp
roadfighter/: Bullet.cpp  Bullet.h  CMakeLists.txt  Entity.cpp  Entity.h  PassingCar.cpp  PassingCar.h  PlayerCar.cpp  PlayerCar.h  RacingCar.cpp  RacingCar.h  World.cpp  World.h
roadfighter/include/: Bullet.h  CMakeLists.txt  Entity.h  Factory.h  PassingCar.h  PlayerCar.h  RacingCar.h  World.h
roadfighter/rf/: Bullet.h  Entity.h  Factory.h  Observable.h  Observer.h  PassingCar.h  PassingNormalCar.h  PassingPointsCar.h  PlayerCar.h  RacingCar.h  World.h
roadfighter/src/: Bullet.cpp  Entity.cpp  Factory.cpp  Observable.cpp  Observer.cpp  PassingCar.cpp  PassingNormalCar.cpp  PassingPointsCar.cpp  PlayerCar.cpp  RacingCar.cpp  World.cpp
roadfighterSFML/: BulletSFML.cpp  BulletSFML.h  PassingCarSFML.h  PlayerCarSFML.cpp  PlayerCarSFML.h  RacingCarSFML.cpp  RacingCarSFML.h
roadfighterSFML/include/: BulletSFML.h  FactorySFML.h  PassingCarSFML.h  PassingNormalCarSFML.h  PassingPointsCarSFML.h  PlayerCarSFML.h  RacingCarSFML.h
roadfighterSFML/src/: BulletSFML.cpp  FactorySFML.cpp  PassingCarSFML.cpp  PassingNormalCarSFML.cpp  PassingPointsCarSFML.cpp  PlayerCarSFML.cpp  RacingCarSFML.cpp
scoreboard/: scoreboard.json
src/: CMakeLists.txt
utils/include/: json.hpp
utils/src/: Random.cpp  Singleton.cpp  Transformation.cpp
verslag/: verslag.aux  verslag.dvi  verslag.tex
